--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,3 @@
-pluginMainClass=org.omegat.filters2.text.dokuwiki.DokuWikiFilter
+pluginMainClass=net.briac.omegat.plugin.PluginSkeleton
+pluginName=PluginSkeleton Plugin
+version=1.0.0
