--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 pluginMainClass=net.briac.omegat.plugin.PluginSkeleton
 pluginName=PluginSkeleton Plugin
 version=1.0.0
+omegatPluginDir=C:/Users/briac/AppData/Roaming/OmegaT/plugins/
