--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,8 @@
 plugins {
     id 'java'
-    id 'findbugs'
-    id 'checkstyle'
     id 'distribution'
-    id 'maven'
-    id 'idea'
     id 'eclipse'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 repositories {
@@ -18,7 +15,7 @@ repositories {
 def compileDependencies = [
         'org.omegat:omegat:4.3.0',
         'commons-io:commons-io:2.4',
-        'commons-lang:commons-lang:2.6'
+        'commons-lang:commons-lang:2.6',
 ]
 
 def testDependencies = [
@@ -27,7 +24,14 @@ def testDependencies = [
         'org.madlonkay.supertmxmerge:supertmxmerge:2.0.1'
 ]
 
+//def jerseyVersion = '2.30.1'
+//def jacksonVersion = '2.10.3'
+def pluginVersion = version
+
 dependencies {
+
+    // Add external dependencies for the plugin
+    //implementation 'org.apache.poi:poi-ooxml:4.1.0'
 
     compileDependencies.each {
         compileOnly it
@@ -49,37 +53,24 @@ jar {
         // plugin's main class name is defined in gradle.properties file.
         attributes(
                 "OmegaT-Plugins": pluginMainClass,
-                "Plugin-Version": version,
+                "Plugin-Version": pluginVersion,
                 "Plugin-Name": pluginName,
-                "Main-Class": pluginMainClass
+                "Plugin-Author": pluginAuthor,
+                "Plugin-Description": pluginDescription,
+                "Main-Class": pluginMainClass,
+                // Used to access the name/version inside the plugin
+                "Implementation-Title": pluginName,
+                "Implementation-Version": pluginVersion
         )
     }
+
 }
 
-/* Checkstyle */
-checkstyle {
-    config = resources.text.fromFile("${rootProject.projectDir}/config/checkstyle/checkstyle.xml")
-    ignoreFailures = true
-    toolVersion = '7.1'
-    sourceSets = [project.sourceSets.main]
-}
-tasks.checkstyleMain.setGroup('Verification')
-tasks.remove(tasks['checkstyleTest'])
-
-/* FindBugs */
-findbugs {
-    ignoreFailures = true
-    sourceSets = [project.sourceSets.main]
-}
-
-tasks.withType(FindBugs) {
-    setGroup('Verification')
-    reports {
-        xml.enabled = false
-        html.enabled = true
+shadowJar {
+    manifest {
+      inheritFrom project.tasks.jar.manifest
     }
-}
-tasks.remove(tasks['findbugsTest'])
+  }
 
 artifacts {
     archives jar
@@ -106,9 +97,9 @@ distributions {
 
 
 task installPlugin(type: Copy) {
-        from 'build/libs/'
+        from 'build/libs'
         into omegatPluginDir
         include('*.jar')
 }
 
-installPlugin.dependsOn installDist
+installPlugin.dependsOn shadowJar
