--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-pluginMainClass=net.briac.omegat.plugin.PluginSkeleton
-pluginName=PluginSkeleton Plugin
+pluginMainClass=${PLUGIN_CLASS}
+pluginName=${PLUGIN_NAME}
 version=1.0.0
+pluginDescription=${PLUGIN_DESCRIPTION}
+pluginAuthor=Briac Pilpr\u00e9
 omegatPluginDir=C:/Users/briac/AppData/Roaming/OmegaT/plugins/
